# bevel

./: .gitignore  Cargo.toml  Dockerfile  README.md  tarprun.sh
doc/: bevel.xml  build.sh  docktest.bv  index.md  pandoc.css  todo.md
extras/: bevel.vim
src/: bevel.pest  checks.rs  error.rs  main.rs  pprinter.rs  prolog_print.rs  span.rs
src/ast/: mod.rs  parse.rs
src/solver/: builtins.rs  mod.rs  optimize.rs  parse.rs  solve.rs  unify.rs
tests/: bad.bv  control_flow.bv  control_flow.pl  execution_tests.rs  fib.bv  fib.pl  list.bv  lists.bv  lists.pl  simple.bv  simple.pl  void.bv  void.pl
