[package]
name = "bevel"
version = "0.0.1"
authors = ["Matthew Torrence <matt@torrencefamily.net>"]
edition = "2018"

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
clap = "2.33.0"
rand = "0.7.2"
linefeed = "0.6.0"

[dependencies.annotate-snippets]
version = "0.6.1"
default-features = false

features = ["color"]
